--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "doss-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dossgames.github.io/doss-react-app/",
   "dependencies": {
     "@react-oauth/google": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
